# GreenVision

./: .gitattributes  .gitignore  CMakeLists.txt  EKstreamcamera.py  GVTest.py  GreenVision.cpp  GreenVision.pro  GreenVision.py  GreenVision.sln  GreenVision.vcxproj  GreenVision.vcxproj.filters  GreenVisionQt.zip.REMOVED.git-id  GreenVision_CalibrateDistance.py  GreenVision_Capture_Image.py  GreenVision_Capture_Video.py  GreenVision_Distance_WIP.py  GreenVision_Find_VFOV.py  GreenVision_Live.cpp  GreenVision_Live.py  GreenVision_MSR.py  GreenVision_NSR.py  GreenVision_Offline.cpp  GreenVision_Offline.py  GreenVision_Pi.py  GreenVision_Record_Video.py  NSR_test1.mpeg  NSR_test1.mpeg.REMOVED.git-id  OpenCV.sln  README.md  RectCoordinates.cpp  RectCoordinates.h  TestSort.py  ZEDstreamcamera.py  calibration_output.json  deploy  fix.txt  requirements.txt  seecam.py  seecam_comp.py  seecam_prac.py  (+14 more)
Archive/: GreenVision_CalibrateDistance.py  GreenVision_Live.py  GreenVision_Offline.py  fix.txt
Camera_Calibration/: images.7z  images.7z.REMOVED.git-id
Distance_Table/: Distance_Table.csv
GreenVision/: GreenVision_Live.cpp  GreenVision_Offline.cpp  OpenCV.vcxproj  OpenCV.vcxproj.filters
GreenVision_pi_bak/: GreenVision.py  GreenVision2.py  README.md  requirements.txt  seecam.py  startup.sh  startup.sh.save  test11.mpg  test11.mpg.REMOVED.git-id  test2.mpg  test2.mpg.REMOVED.git-id
Logs/: vision_log.csv  vision_net_values.csv
Test Images/: GreenVision_Capture_Image.py  imagehand1.jpg.REMOVED.git-id  opencv_image_12in.jpg.REMOVED.git-id  opencv_image_18in.jpg.REMOVED.git-id  opencv_image_20in.jpg.REMOVED.git-id  opencv_image_24in.jpg.REMOVED.git-id  opencv_image_6in.jpg.REMOVED.git-id
Test_Images/: Image_000.jpg.REMOVED.git-id  Image_001.jpg.REMOVED.git-id  Image_002.jpg.REMOVED.git-id  Image_003.jpg.REMOVED.git-id  Image_004.jpg.REMOVED.git-id  Image_005.jpg.REMOVED.git-id  Image_006.jpg.REMOVED.git-id  Video_VariableDistance.avi.REMOVED.git-id  image-nohand1.jpg.REMOVED.git-id  opencv_image_30in.jpg.REMOVED.git-id
Video_Capture/: Video_SlowTilting.avi  Video_SlowTilting.avi.REMOVED.git-id  multiple_contours_long.avi  test2.mpg  test2.mpg.REMOVED.git-id  test9.mpg
docs/: .buildinfo  Makefile  about.rst  calibration.html  (+13 more)
(+42 files in other folders)
